--- a/courses/an10/homework/ha09.tex
+++ b/courses/an10/homework/ha09.tex
@@ -229,6 +229,7 @@ Gelingt dies mit dem Wurzelkriterium?
   \end{flalign*}
 \end{minipage}
 
+\newpage
 In der Vorlesung wurde das Quotientenkriterium in zwei Formen eingeführt:
 \begin{enumerate}[(1)]
 \item Wenn für fast $n \in \mathbb{N}$ gilt, dass
@@ -240,7 +241,7 @@ In der Vorlesung wurde das Quotientenkriterium in zwei Formen eingeführt:
   $\sum_n \norm{a_n}$.
 \end{enumerate}
 Die Folge fällt in keine der beiden Formen, somit lässt sich mit dem
-Quotientenkriterium keine Aussage über die Konvergenz der Reihe treffen.
+Quotientenkriterium keine Aussage über die Konvergenz der Reihe treffen. \\
 
 \begin{minipage}{0.4\textwidth}
   Angenommen $2$ teilt $n$, dann ist
