feat: Better explanation

--- a/courses/la10/homework/ha08.tex
+++ b/courses/la10/homework/ha08.tex
@@ -114,8 +114,8 @@ Begründen Sie Ihre Antwort.
 
 \subparagraph{Lsg.} Sei $K = \mathbb{Z}_{/2}$, dann ist
 $1_k + 1_k = 0_k$, $0_k + 1_k = 1_k + 0_k = 1_k$ und $0_k + 0_k$.
-Seien nun $k_1 = k_2 = k_3$ das neutrale Element der Multiplikation,
-dann ist
+Seien nun $k_1 = k_2 = k_3$ gleich dem neutralen Element der Multiplikation
+in $K$, dann ist
 \[
   k_1 \cdot \begin{pmatrix}1_K \\ 1_K \\ 0_K \end{pmatrix} +
   k_2 \cdot \begin{pmatrix}1_K \\ 0_K \\ 1_K \end{pmatrix} +
