--- a/courses/an10/homework/ha10.tex
+++ b/courses/an10/homework/ha10.tex
@@ -114,51 +114,56 @@
 \newpage
 \item Zeigen Sie, dass die Eulersche Zahl $e$ irrational ist.
 
-  \subparagraph{Lsg.} Alle Glieder der Reihe $\sum_{k = 0}^{\infty} \frac{1}{k!}$
-  sind positiv und
+  \subparagraph{Lsg.} Alle Glieder der Folge $\qty\big{s_n}$ sind positiv, somit
+  ist die Reihe $\sum_{n = 0}^{\infty} s_n$ streng monoton wachsend und
   $\sum_{k = 0}^{1} \frac{1}{k!} = \frac{1}{1} + \frac{1}{1} = 2$.
 
-  $\Rightarrow \sum_{k = 0}^{\infty} \frac{1}{k!} \geq 2$
+  $\Rightarrow \sum_{k = 0}^{\infty} \frac{1}{k!} > 2$
 
   Weiterhin ist
   \[
     \sum_{k = 0}^{\infty} =
     \qty(\frac{1}{1} + \frac{1}{1} + \sum_{k = 2}^{\infty} \frac{1}{k!})
-    \leq
-    \qty(1 + \sum_{k = 1}^{\infty}\qty(\frac{1}{2})^k)
-    = \qty(1 + \frac{1}{1 - \frac{1}{2}} - 1) = 3
+    < \qty(1 + 1 + \sum_{k = 1}^{\infty}\qty(\frac{1}{2})^k)
+    = \qty(1 + 1 + \frac{1}{1 - \frac{1}{2}} - 1) = 3
   \]
 
-  $\Rightarrow \sum_{k = 0}^{\infty} \frac{1}{k!} \leq 3$
+  $\Rightarrow \sum_{k = 0}^{\infty} \frac{1}{k!} < 3$
 
   Angenommen $e$ wäre rational, dann existieren $p, q \in \mathbb{N}$, so dass
   $\frac{p}{q} = e$.
-  Da $2 \leq e \leq 3$ und $e \ne 2$ als auch $e \ne 3$ folgt $p > 2, q > 1$.
+  Aus $2 < e < 3$ folgt $p > 2, \colorbox{yellow}{$q > 1$}$.
 
-  Da $s_q$ eine endliche Summe von positiven rationalen Zahlen ist und
-  aufgrund der rekursiven Definition der Fakultät für $n \leq q$ der Ausdruch
-  $n!$ ein Teiler von $q!$ ist, existiert ein $m \in \mathbb{N}$ mit
-  $\frac{m}{q!} = s_q$.
+  $s_q = 1 + 1 + \frac{1}{2!} + \ldots + \frac{1}{\qty\big(q - 1)!} +
+  \frac{1}{q!}$.
+  Aufgrund der rekursiven Definition der Fakultät sind $\qty\big(q - 1)!$,
+  $\qty\big(q - 2)!, \ldots$ Teiler von $q!$.
+
+  $\Rightarrow$ es existiert ein $q' \in \mathbb{N}$ mit $s_q = \frac{q'}{q!}$.
 
   Weiterhin ist $s_q \leq e$, ansonsten Widerspruch zu
   $\lim_{n \to \infty} s_n = e$ als Summe positiver Glieder.
-
-  Folglich ist
   \begin{flalign*}
     \abs\big{e - s_q}
-    \overset{e > s_q}&= e - s_q \\
-    &= \frac{p\qty\big(q - 1)!}{q\qty\big(q - 1)!} - s_q \\
-    &= \frac{p\qty\big(q - 1)!}{q!} - \frac{m}{q!} \\
-    &= \frac{p\qty\big(q - 1)! - m}{q!} \\
-    &= \frac{q \cdot \qty\Big(p \cdot \qty\big(q - 1)! - m)}{qq!} \\
+    &= \abs{\frac{p\qty\big(q - 1)!}{q\qty\big(q - 1)!} - s_q} \\
+    &= \abs{\frac{p\qty\big(q - 1)!}{q!} - \frac{q'}{q!}} \\
+    &= \abs{\frac{p\qty\big(q - 1)! - q'}{q!}} \\
+    &= \abs{\frac{q \cdot \qty\Big(p \cdot \qty\big(q - 1)! - q')}{qq!}} \\
     \overset{\text{(a)}}&\leq \frac{1}{qq!}
   \end{flalign*}
 
-  $\Rightarrow 1 \geq q \cdot \qty\Big(p\qty \big(q - 1)! - m)
-  \overset{q > 1} > p\qty\big(q - 1)! - m
-  \overset{m \in \mathbb{N}}> p \qty\big(q - 1)
-  \overset{p > 2}> 2\cdot \qty\big(q - 1)
-  \overset{q > 1}> 2$, ein Widerspruch.
+  $\Rightarrow 1 \geq \abs{q \cdot \qty\Big(p\qty \big(q - 1)! - q')}$
+  und da \colorbox{yellow}{$q > 1$} folgt
+  $1 \geq 2 \cdot \abs{p\qty\big(q - 1)! - q'}$.
+
+  Angenommen $p\qty\big(q - 1)! - q' = 0$, dann ist
+  $\underset{e}{\underbrace{\frac{p\qty\big(q - 1)!}{q!}}} =
+  \underset{s_q}{\underbrace{\frac{q'}{q!}}}$ und
+  $e < s_{q + 1}$, ein Widerspruch zu
+  $s_n \overset{n \to \infty}\longrightarrow e$.
+
+  $\Rightarrow 0 < \abs{p\qty\big(q - 1)! - q'} < \frac{1}{2}$, ein Widerspruch zu
+  $p, q, q' \in \mathbb{N}$
 
   $\Rightarrow$ \underline{$e$ ist irrational}
 \end{enumerate}
